:hammer: Fixed various spacing things on the front-page. Mostly just doublechecking responsiveness and amking some tweaks for that.

--- a/devwp/sass/components/_backgrounds.scss
+++ b/devwp/sass/components/_backgrounds.scss
@@ -23,7 +23,7 @@ body {
   background-repeat: no-repeat;
   background-attachment: scroll;
   background-size: cover;
-  height: 800px;
+  height: 650px;
   position: relative;
 }
 
