--- a/devwp/sass/components/_buttons.scss
+++ b/devwp/sass/components/_buttons.scss
@@ -25,7 +25,7 @@
   align-self: center;
   font-size: 1rem;
   line-height: 1;
-  padding: 10px 40px;
+  padding: 15px 40px;
   min-width: 120px;
   min-height: 30px;
   text-decoration: none;
@@ -38,6 +38,11 @@
     color: #fff;
     outline: 0;
   }*/
+}
+
+// If you have a lot of text in the button, use this to reduce the padding for more space.
+.padding-button {
+  padding: 15px 20px;
 }
 
 
