--- a/devwp/sass/utilities/_images.scss
+++ b/devwp/sass/utilities/_images.scss
@@ -45,9 +45,9 @@
 
 @media screen and (min-width: 64em) {
   .large-logo {
-    right: 0px;
+    right: 150px;
     top: -30px;
-    width: 40%;
+    width: 35%;
     opacity: 1;
   }
 }
