--- a/devwp/sass/utilities/_typography.scss
+++ b/devwp/sass/utilities/_typography.scss
@@ -65,13 +65,13 @@ h3 {
 }
 
 .name-title {
-  font-size: 1.2em;
+  font-size: 1.4em;
 }
 
 .subtitle {
   font-family: $head-font;
   font-weight: 500;
-  font-size: 1.2em;
+  font-size: 1.3em;
   margin-top: -5px;
   text-align: center;
 }
